--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
     traefik:
         image: traefik:${TRAEFIK_VERSION:-3.1.2}
-        container_name: ${PROJECT_NAME}_traefik
+        container_name: ${PROJECT_NAME:-traefik}_traefik
         restart: unless-stopped
         env_file:
             - .env
@@ -17,17 +17,14 @@ services:
             - ${TRAEFIK_SUBMISSION_PORT:-587}:587
         labels:
             - traefik.enable=true
-            - traefik.http.routers.${PROJECT_NAME}_traefik.rule=Host(`${TRAEFIK_DASHBOARD_UI`)
-            - traefik.http.routers.${PROJECT_NAME}_traefik.tls=true
-            - traefik.http.routers.${PROJECT_NAME}_traefik.service=api@internal
-            - traefik.http.routers.${PROJECT_NAME}_traefik.priority=998
-            - traefik.http.routers.${PROJECT_NAME}_traefik.tls.certresolver=letsencrypt
-            # Add htpasswd
-            - traefik.http.routers.${PROJECT_NAME}_traefik.middlewares=basic-auth
-            - traefik.http.middlewares.basic-auth.basicauth.users=${TRAEFIK_HTPASSW_USER}:${TRAEFIK_HTPASSW_PXD}
-            # Create hash password -> echo $(htpasswd -nb username password) | sed -e s/\\$/\\$\\$/g
+            - traefik.http.routers.${PROJECT_NAME:-traefik}_traefik.rule=Host(`${TRAEFIK_DASHBOARD_UI}`)
+            - traefik.http.routers.${PROJECT_NAME:-traefik}_traefik.tls=true
+            - traefik.http.routers.${PROJECT_NAME:-traefik}_traefik.service=api@internal
+            - traefik.http.routers.${PROJECT_NAME:-traefik}_traefik.priority=998
+            - traefik.http.routers.${PROJECT_NAME:-traefik}_traefik.tls.certresolver=letsencrypt
+            - traefik.http.routers.${PROJECT_NAME:-traefik}_traefik.middlewares=basic-auth
+            - traefik.http.middlewares.basic-auth.basicauth.users=${TRAEFIK_HTPASSWD_USER}:${TRAEFIK_HTPASSWD_PWD}
 
-            # globaly redirect to https
             - traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)
             - traefik.http.routers.http-catchall.entrypoints=web
             - traefik.http.routers.http-catchall.priority=999
