--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ PROJECT_ENV=development
 PROJECT_NAME=traefik
 PROJECT_NETWORK=${PROJECT_NAME}
 TRAEFIK_DASHBOARD_UI=traefik.example.com
-TRAEFIK_HTPASSW_USER=${PROJECT_NAME}
-TRAEFIK_HTPASSW_PWD=#Create hash password -> echo $(htpasswd -nb username password) | sed -e s/\\$/\\$\\$/g
+TRAEFIK_HTPASSWD_USER=${PROJECT_NAME}
+TRAEFIK_HTPASSWD_PWD=# Create hash password -> echo $(htpasswd -nb username password) | sed -e s/\\$/\\$\\$/g
