--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
+### PROJECT ###
 PROJECT_ENV=development
 PROJECT_NAME=traefik
 PROJECT_NETWORK=${PROJECT_NAME}
+
+### TRAEFIK ###
 TRAEFIK_DASHBOARD_UI=traefik.example.com
 TRAEFIK_HTPASSWD_USER=${PROJECT_NAME}
 TRAEFIK_HTPASSWD_PWD=# Create hash password -> echo $(htpasswd -nb username password) | sed -e s/\\$/\\$\\$/g
+
+### LETSENCRYPT ###
+LETSENCRYPT_EMAIL=contact@example.com
+LETSENCRYPT_SERVER=https://acme-staging-v02.api.letsencrypt.org/directory
